# Exercises_A

./: .gitignore
ARENA/: balanced_brackets.py  cnns_and_resnets.py  convolution.py  dqn.py  einops_remedial.py  gan.py  gan_vae.py  indirect_object_identification.py  mech_interp_intro.py  optimization.py  othello.py  ppo.py  raytracer.py  rl_intro.py  rlhf.py  superposition.py  token_embedding_inquiry.py  transformer.py  vae.py
ARENA/backprop/: Cargo.toml
ARENA/backprop/src/: autograd.rs  basic_exercises.rs  main.rs
Cracking_the_Coding_Interview/: 01-01.rs  01-02.py  01-03.py  01-03.rs  01-07.rs  03-01.rs  09-06.py  09-08.rs  17-02.py  17-03.rs  17-05.py  17-06.py  18-13.clj  linked_list.rs  remove_duplicate_characters.py
Learn_C/: Makefile  ex1.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex19.h  ex3.c  ex5.c  ex8.c  mymake.sh  object.c  object.h
Misc/: adversarial_spheres.py  crack_cryptogram.py  inappropriately_naive_bayes.py  tetris.cpp  word_from_missing_letters.py
Modern_Compiler_Design/: 1-verbal.md  1_demo.py  demo.demo  stack_arithmetic.rs
Programming_Challenges/: 1-6-1.clj  1-6-1.rs  1-6-2.clj  1-6-4.py  1-6-5.clj  1-6-6.clj  1-6-6.rs  1-6-8.rkt  11-6-5.clj  12-6-1.clj  12-6-3.clj  12-6-4.clj  12-6-7.clj  2-8-1.clj  2-8-3.clj  2-8-8.clj  3-8-1.rs  4-6-2.clj  5-9-1.clj  5-9-2.clj  5-9-4.clj  5-9-6.clj  5-9-7.clj  5-9-7.rs  6-6-1.clj  7-6-1.clj  7-6-1.rs  7-6-4.clj  7-6-5.hy  8-6-1.py  8-6-2.clj  8-6-6.hy  8-backtracking.py  8-powerset_example.py  9-6-5.clj
Stockfighter/: .gitignore
Structure_and_Interpretation/: 2-1.clj  2-18.clj  (+42 more)
(+152 files in other folders)
