[package]
name = "arena-backprop"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
lazy_static = "*"
ndarray = {version = "*", features = ["approx"]}
num-traits = "*"
topological-sort = "*"

